--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
     <!-- head content skipped -->
   </head>
   <body>
-
-  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <textarea name="message"></textarea>
-  </form>
-  
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+    <meta name="viewport" content="width=device-width" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
